# offer-copilot

./: .gitignore  OfferPilot_产品文档.docx  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e04cf165af4_create_users_table.py  329d0ca11757_add_current_identity_to_users.py  514a5f22a754_update_users_table_email_字段为唯一约束.py  b0cdee9a58ee_update_users_table.py
backend/app/: main.py
backend/app/api/: router.py  routers.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  response.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  enums.py  user.py
backend/app/modules/auth/: router.py
backend/app/modules/users/: __init__.py  router.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: auth_service.py
deploy/: docker-compose.yml
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/public/: error-404.lottie
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/lib/: env.ts  http.ts
frontend/src/services/: auth.ts  users.ts
skills/offerpilot-delivery/: SKILL.md
skills/offerpilot-delivery/references/: delivery-scope.md  env.md  (+1 more)
skills/offerpilot-engineering-context/: SKILL.md
skills/offerpilot-frontend/: SKILL.md
skills/offerpilot-product/: SKILL.md
skills/offerpilot-tech/: SKILL.md
skills/skill-creator/: SKILL.md
(+24 files in other folders)
