[project]
name = "offercopilot-api"
version = "0.1.0"
description = "OfferPilot API is an AI job-search copilot backend built with FastAPI, Celery, Redis, and PostgreSQL, focused on JD analysis, resume scoring, resume optimization, and interview preparation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "boto3>=1.42.92",
    "celery>=5.6.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    "email-validator>=2.2.0",
    "bcrypt>=5.0.0",
]
